--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -61,6 +61,15 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+        <div class="container-fluid notification-container">
+            <div class="row">
+                <div class ="col-xs-12 alert alert-success" role="alert">
+                    <p><span>We've sent you a message at: <strong>tarasov.e.a@gmail.com</strong></span></p>
+                    <p><span>Follow the link in that message to reset your password.</span></p>
+                </div>
+            </div>
+        </div>
+        <hr class="hr-unstyled"/>
         <div class="container-fluid">
             <div class="login-container">
 
@@ -71,7 +80,7 @@
                     <div class="col-xs-12">
                         <a href="#" class="provider-link" id="login-facebook">
                             <i class="fa fa-facebook provider-icon"></i>
-                            <span class="provider-name">Facebook</span>
+                            <span>Facebook</span>
                         </a>
                     </div>
                 </div>
@@ -79,7 +88,7 @@
                     <div class="col-xs-12">
                         <a href="#" class="provider-link" id="login-google">
                             <i class="fa fa-google provider-icon"></i>
-                            <span class="provider-name">Google</span>
+                            <span>Google</span>
                         </a>
                     </div>
                 </div>
@@ -88,7 +97,10 @@
                     <div class="col-xs-12"><span>We'll <strong>never</strong> post without your permission.</span></div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12"><h5><strong>or</strong></h5></div>
+                    <div class="col-xs-12">
+                        <hr/>
+                        <!--                        <h5><strong>or</strong></h5>-->
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
@@ -113,15 +125,64 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <a href="#" class="login-button" id="login-button">
-                            <span class="provider-name">Login</span>
+                            <span>Login</span>
                         </a>
                     </div>
                 </div>
+                <div class="row login-addons">
+                    <div class="col-xs-6">
+                        <p>
+                            <a href="#">
+                                <span>Forgot password</span>
+                            </a>
+                        </p>
 
+                    </div>
+                    <div class="col-xs-6">
+                        <a href="#">
+                            <p>
+                                <span>Create new account</span>
+                            </p>
+                        </a>
+                    </div>
+
+                </div>
+                <div class="row tos-area">
+                    <div class="col-xs-12">
+                        <p>
+                            By logging in, you agree to our <a href="/about/tos" target="_blank">Terms of Service</a> and <a href="/about/privacy-policy" target="_blank">Privacy Policy</a>.
+                        </p>
+                    </div>
+
+                </div>
             </div>
-            <hr class="hr-unstyled"/>
+        </div>
+        <hr class="hr-unstyled"/>
+        <div class="container-fluid">
+            <div class="login-container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h4>Enter your email to reset your password</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <p>
+                            <input type="email" class="form-control" placeholder="Email"/>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <a href="#" class="login-button" id="login-button">
+                            <span>Reset</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
+        <hr class="hr-unstyled"/>
         <footer>
             <div class="container">
                 <div class="row links">
