--- a/static/app/sass/app.scss
+++ b/static/app/sass/app.scss
@@ -1,4 +1,24 @@
+/*.navbar-default {
+    .navbar-nav {
+
+        >li >a {
+            color: blueviolet;
+        }
+    }
+}*/
+
+
 body {
+
+/*    .navbar
+    {
+        background-color: lightgoldenrodyellow;
+    }*/
+
+    .test:hover
+        {
+        background-color: yellowgreen;
+    }
     //background-image: url(/images/test.png);
     //background-color: red;
     footer {
