--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -48,7 +48,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-th"></span> Designs</a></li>
+                        <li class="test"><a href="#"><span class="glyphicon glyphicon-th"></span> Designs</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> User</span></a>
                             <ul class="dropdown-menu">
@@ -120,6 +120,13 @@
                             <input type="password" class="form-control" placeholder="Password"/>
                         </p>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 alert alert-danger" role="alert">
+                        <span>
+                            Password incorrect
+                        </span>
                     </div>
                 </div>
                 <div class="row">
@@ -245,6 +252,7 @@
         <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
+        <script src="../bower_components/angular-translate/angular-translate.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
