--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -61,6 +61,66 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="..." alt="...">
+                        <div class="caption">
+                            <h3>Chinesse girl</h3>
+                            <p></p>
+                            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="hr-unstyled"/>
+        <div class="container-fluid settings-container">
+
+
+
+            <div class="row">
+                <div class ="col-xs-12">
+                    <form class="form-horizontal">
+                        <legend>Password</legend>
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-default btn-block">Change password</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class ="col-xs-12">
+                    <form class="form-horizontal">
+                        <legend>Delete account</legend>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-danger">Delete account</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <hr class="hr-unstyled"/>
+
         <div class="container-fluid notification-container">
             <div class="row">
                 <div class ="col-xs-12 alert alert-success" role="alert">
@@ -107,28 +167,33 @@
                         <h4>Log in to your Stitch Galaxy account</h4>
                     </div>
                 </div>
+
+
                 <div class="row">
                     <div class="col-xs-12">
                         <p>
                             <input type="email" class="form-control" placeholder="Email"/>
                         </p>
+                        <div class="has-success">
+                            <span id="helpBlock2" class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
                         <p>
-                            <input type="password" class="form-control" placeholder="Password"/>
+                            <input type="password" class="form-control has-error" placeholder="Password"/>
                         </p>
 
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-12 alert alert-danger" role="alert">
-                        <span>
-                            Password incorrect
-                        </span>
-                    </div>
-                </div>
+                <!--                <div class="row">
+                                    <div class="col-xs-12 alert alert-danger" role="alert">
+                                        <span>
+                                            Password incorrect
+                                        </span>
+                                    </div>
+                                </div>-->
                 <div class="row">
                     <div class="col-xs-12">
                         <a href="#" class="login-button" id="login-button">
