--- a/static/app/sass/app.scss
+++ b/static/app/sass/app.scss
@@ -1,3 +1,7 @@
+@import "customVariables";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-compass";
+
 /*.navbar-default {
     .navbar-nav {
 
