--- a/static/app/templates/login.html
+++ b/static/app/templates/login.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
-                        <img src="..." alt="...">
+                        <img src="" alt="">
                         <div class="caption">
                             <h3>Chinesse girl</h3>
                             <p></p>
@@ -305,7 +305,6 @@
                         <p class="text-right">Except where noted, all rights reserved.</p>
                     </div>
                 </div>
-
             </div>
         </footer>
 
