gulp almost done: _base.scss not maps in prod

--- a/static/app/partials/search.html
+++ b/static/app/partials/search.html
@@ -1,1 +1,10 @@
 <p>Search partial!!!</p>
+        <hr class="hr-unstyled"/>
+        <div class="container-fluid notification-container">
+            <div class="row">
+                <div class ="col-xs-12 alert alert-success" role="alert">
+                    <p><span>We've sent you a message at: <strong>tarasov.e.a@gmail.com</strong></span></p>
+                    <p><span>Follow the link in that message to reset your password.</span></p>
+                </div>
+            </div>
+        </div>
