--- a/static/app/sass/modules/_base.scss
+++ b/static/app/sass/modules/_base.scss
@@ -1,6 +1,7 @@
-@import "customVariables";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-compass";
+//
+// Base
+// --------------------------------------------------
+
 
 /*.navbar-default {
     .navbar-nav {
