--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,4 +1,1 @@
-@import "customVariables";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-compass";
-@import "../sass/modules/base";
+@import "../sass/modules/grid";
