--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -3,3 +3,7 @@
 //
 
 @import "modules/site/module";
+
+//modules for stlye guide
+@import "modules/component-description/module";
+@import "modules/style-foundation/module";
