--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -7,6 +7,21 @@ $bp-sm: 48em;
 $bp-md: 62em;
 $bp-lg: 75em;
 
+//Colors
+
+
+$color-wall: #F8F8FF;
+$color-pistachio: #93c572;
+$color-blue: #AFEEEE;
+
+
+$color-brown: #CD853F;
+$color-green: #2E8B57;
+$color-grey: #C0C0C0;
+$color-violet: #DB7093;
+$color-white: #FFFFFF;
+$color-black: #000000;
+
 //Fonts sizes
 $ua-default-font-size-px: 16px;
 $site-base-font-size-px: 16px !default;
@@ -14,6 +29,7 @@ $site-base-font-size-px: 16px !default;
 $site-base-font-size-rem: $site-base-font-size-px / $ua-default-font-size-px * 1rem;
 $site-base-line-height: 1.5 !default;
 
-$h1-font-scale: 1.3 !default;
-$h2-font-scale: 1.2 !default;
-$h3-font-scale: 1.1 !default;
+$h1-font-scale: 1.5 !default;
+$h2-font-scale: 1.3 !default;
+$h3-font-scale: 1.25 !default;
+$h4-font-scale: 1.1 !default;
