--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -10,15 +10,24 @@ $bp-lg: 75em;
 //Colors
 
 
+//Primary colors - background, blocks, etc
+$color-pistachio: #99CC33;
+$color-turquoise: #99FFFF;
 $color-wall: #F8F8FF;
-$color-pistachio: #93c572;
-$color-blue: #AFEEEE;
+//Supplementary colors
 
+//Informational
+$color-red: #CC3300;
+$color-green: #669900;
+$color-blue: #0066CC;
+$color-yellow: #FFFF66;
 
-$color-brown: #CD853F;
-$color-green: #2E8B57;
+//Just beauty and funny: you can mix them
+$color-brown: #996600;
 $color-grey: #C0C0C0;
-$color-violet: #DB7093;
+$color-orange: #FF9933;
+
+//Plain colors
 $color-white: #FFFFFF;
 $color-black: #000000;
 
