--- a/static/sass/modules/color-palette/_module.scss
+++ b/static/sass/modules/color-palette/_module.scss
@@ -6,34 +6,156 @@ $module: 'color-palette';
     @include bem-block_set-font();
     padding-left: 1em;
     padding-right: 1em;
-    
+
     &__line {
         display: flex;
+        justify-content: space-around;
+        align-items: center;
         @include bem-element_set-font-size(1.0);
         @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
         min-height: 1.5em;
         
+        &_width_double {
+            min-height: 3em;
+        }
         
-        &_color_pistachio {
-            background-color: $color-pistachio;
+        &_color {
+            //Main
+            &_pistachio {
+                background-color: $color-pistachio;
+            }
+            &_turquoise {
+                background-color: $color-turquoise;
+            }
+            &_wall {
+                background-color: $color-wall;
+            }
+            //Informational
+            &_red {
+                background-color: $color-red;
+            }
+            &_green {
+                background-color: $color-green;
+            }
+            &_blue {
+                background-color: $color-blue;
+            }
+            &_yellow {
+                background-color: $color-yellow;
+            }
+            //Supplementary
+            &_brown {
+                background-color: $color-brown;
+            }
+            &_grey {
+                background-color: $color-grey;
+            }
+            &_orange {
+                background-color: $color-orange;
+            }
+            //Plain
+            &_white {
+                background-color: $color-white;
+            }
+            &_black {
+                background-color: $color-black;
+            }
         }
     }
-    
+
     &__square {
-        flex: 1;
-        height: 0.5em;
-        
-        &_color_blue {
-            background-color: $color-blue;
+        height: 1.5em;
+        min-width: 1.5em;
+        flex: 0 1 auto;
+
+        &_color {
+            //Main
+            &_pistachio {
+                background-color: $color-pistachio;
+            }
+            &_turquoise {
+                background-color: $color-turquoise;
+            }
+            &_wall {
+                background-color: $color-wall;
+            }
+            //Informational
+            &_red {
+                background-color: $color-red;
+            }
+            &_green {
+                background-color: $color-green;
+            }
+            &_blue {
+                background-color: $color-blue;
+            }
+            &_yellow {
+                background-color: $color-yellow;
+            }
+            //Supplementary
+            &_brown {
+                background-color: $color-brown;
+            }
+            &_grey {
+                background-color: $color-grey;
+            }
+            &_orange {
+                background-color: $color-orange;
+            }
+            //Plain
+            &_white {
+                background-color: $color-white;
+            }
+            &_black {
+                background-color: $color-black;
+            }
         }
     }
-    
+
     &__text {
-        flex: 1;
-        height: 0.5em;
-        
-        &_color_blue {
-            color: $color-blue;
+        flex: 0 1 auto;
+
+        &_color {
+            //Main
+            &_pistachio {
+                color: $color-pistachio;
+            }
+            &_turquoise {
+                color: $color-turquoise;
+            }
+            &_wall {
+                color: $color-wall;
+            }
+            //Informational
+            &_red {
+                color: $color-red;
+            }
+            &_green {
+                color: $color-green;
+            }
+            &_blue {
+                color: $color-blue;
+            }
+            &_yellow {
+                color: $color-yellow;
+            }
+            //Supplementary
+            &_brown {
+                color: $color-brown;
+            }
+            &_grey {
+                color: $color-grey;
+            }
+            &_orange {
+                color: $color-orange;
+            }
+            //Plain
+            &_white {
+                color: $color-white;
+            }
+            &_black {
+                color: $color-black;
+            }
         }
     }
 }
