--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -9,12 +9,10 @@ $bp-lg: 75em;
 
 //Colors
 
-
 //Primary colors - background, blocks, etc
 $color-pistachio: #99CC33;
 $color-turquoise: #99FFFF;
 $color-wall: #F8F8FF;
-//Supplementary colors
 
 //Informational
 $color-red: #CC3300;
@@ -22,7 +20,7 @@ $color-green: #669900;
 $color-blue: #0066CC;
 $color-yellow: #FFFF66;
 
-//Just beauty and funny: you can mix them
+//Supplementary colors
 $color-brown: #996600;
 $color-grey: #C0C0C0;
 $color-orange: #FF9933;
@@ -32,11 +30,8 @@ $color-white: #FFFFFF;
 $color-black: #000000;
 
 //Fonts sizes
-$ua-default-font-size-px: 16px;
-$site-base-font-size-px: 16px !default;
-
-$site-base-font-size-rem: $site-base-font-size-px / $ua-default-font-size-px * 1rem;
-$site-base-line-height: 1.5 !default;
+$site-base-font-size-em: 1em;
+$site-base-line-height: 1.5;
 
 $h1-font-scale: 1.5 !default;
 $h2-font-scale: 1.3 !default;
