--- a/static/sass/modules/style-foundation/_style-foundation.scss
+++ b/static/sass/modules/style-foundation/_style-foundation.scss
@@ -25,6 +25,8 @@ $module: 'style-foundation';
         display: block;
         @include bem-element_set-font-size(1.0);
         @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        padding-left: 1em;
+        padding-right: 1em;
     }
     
     &__bottom-splitter{
