--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,4 +1,5 @@
 @import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import '../bower_components/modular-scale/stylesheets/modular-scale';
 @import "config/index";
 @import "utils/index";
 @import "modules/index";
