--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -2,4 +2,4 @@
 @import '../bower_components/modular-scale/stylesheets/modular-scale';
 @import "config/index";
 @import "utils/index";
-@import "modules/index";
+//@import "modules/index";
