--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -33,6 +33,11 @@ $color-black: #000000;
 $site-base-font-size-em: 1em;
 $site-base-line-height: 1.5;
 
+$ms-base: $site-base-font-size-em;
+$ms-ratio: $golden $fourth;
+
+$ms-range: 1.1 20em, 1.333 60em;
+
 $h1-font-scale: 1.5 !default;
 $h2-font-scale: 1.3 !default;
 $h3-font-scale: 1.25 !default;
