--- a/static/sass/modules/color-palette/_color-palette.scss
+++ b/static/sass/modules/color-palette/_color-palette.scss
@@ -2,7 +2,7 @@ $module: 'color-palette';
 
 .#{$module} {
     display: block;
-    @include bem-block_add-vertical-margin-to-preserve-rhytm();
+    //@include bem-block_add-vertical-margin-to-preserve-rhytm();
     @include bem-block_set-font();
     padding-left: 1em;
     padding-right: 1em;
@@ -11,8 +11,8 @@ $module: 'color-palette';
         display: flex;
         justify-content: space-around;
         align-items: center;
-        @include bem-element_set-font-size(1.0);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_set-font-size(0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
         min-height: 1.5em;
         
         &_width_double {
