--- a/static/sass/modules/component-description/_component-description.scss
+++ b/static/sass/modules/component-description/_component-description.scss
@@ -2,39 +2,39 @@ $module: 'component-description';
 
 .#{$module} {
     display: block;
-    @include bem-block_add-vertical-margin-to-preserve-rhytm();
+    //@include bem-block_add-vertical-margin-to-preserve-rhytm();
     @include bem-block_set-font();
     padding-left: 3em;
     padding-right: 3em;
 
     &__header {
         display: block;
-        @include bem-element_set-font-size($h3-font-scale);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm($h3-font-scale);
+        @include bem-element_set-font-size(1);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(1);
         font-weight: normal;
     }
 
     &__link {
-        @include bem-element_set-font-size(1.0);
+        @include bem-element_set-font-size(0);
     }
 
     &__bd {
         display: block;
-        @include bem-element_set-font-size(1.0);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_set-font-size(0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
         padding-left: 1em;
         padding-right: 1em;
     }
 
     &__elements {
         display: block;
-        @include bem-element_set-font-size(1.0);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_set-font-size(0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
     }
 
     &__bottom-splitter{
         display: block;
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
     }
 
     &__block-name{
