--- a/static/sass/modules/style-foundation/_style-foundation.scss
+++ b/static/sass/modules/style-foundation/_style-foundation.scss
@@ -2,35 +2,35 @@ $module: 'style-foundation';
 
 .#{$module} {
     display: block;
-    @include bem-block_add-vertical-margin-to-preserve-rhytm();
+    //@include bem-block_add-vertical-margin-to-preserve-rhytm();
     @include bem-block_set-font();
     padding-left: 3em;
     padding-right: 3em;
     
     &__header {
         display: block;
-        @include bem-element_set-font-size($h1-font-scale);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm($h1-font-scale);
+        @include bem-element_set-font-size(2);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(2);
         font-weight: bold;
     }
     
     &__sub-header {
         display: block;
-        @include bem-element_set-font-size($h2-font-scale);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm($h2-font-scale);
+        @include bem-element_set-font-size(1);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(1);
         font-weight: bold;
     }
     
     &__bd {
         display: block;
-        @include bem-element_set-font-size(1.0);
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_set-font-size(0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
         padding-left: 1em;
         padding-right: 1em;
     }
     
     &__bottom-splitter{
         display: block;
-        @include bem-element_add-vertical-margin-to-preserve-rhytm(1.0);
+        @include bem-element_add-vertical-margin-to-preserve-rhytm(0);
     }
 }
