--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -34,14 +34,17 @@ $site-base-font-size-em: 1em;
 $site-base-line-height: 1.5;
 
 $ms-base: 1em;
-$ms-ratio: 1.618,1.333;
+$ms-ratio: $golden, $fourth, $fifth;
 
-//$ms-base: $site-base-font-size-em;
-//$ms-ratio: $golden $fourth;
+$ms-range:
+  1.1 20em,
+  1.6 60em;
 
-//$ms-range: 1.1 20em, 1.333 60em;
+//$ms-fluid: false;
 
-//$h1-font-scale: 1.5 !default;
-//$h2-font-scale: 1.3 !default;
-//$h3-font-scale: 1.25 !default;
-//$h4-font-scale: 1.1 !default;
+/*$ms-range:
+  1.2 20em,
+  1.3 30em,
+  1.4 40em,
+  1.5 50em,
+  1.6 60em;*/
