--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,5 +1,6 @@
+@import "modular-scale";
+@import "breakpoint";
 @import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
-@import "../bower_components/modular-scale/stylesheets/modular-scale";
 @import "config/index";
 @import "utils/index";
 @import "modules/index";
