--- a/static/sass/config/_variables.scss
+++ b/static/sass/config/_variables.scss
@@ -29,17 +29,7 @@ $color-orange: #FF9933;
 $color-white: #FFFFFF;
 $color-black: #000000;
 
-//Fonts sizes
-$site-base-font-size-em: 1em;
-$site-base-line-height: 1.5;
-
-$ms-base: 1em;
-$ms-ratio: $golden;
-
-$ms-range:
-1.1 20em,
-1.6 60em;
-
+//Fonts
 //http://prgssr.ru/development/estetichnyj-sass-chast-3-tipografika-i-vertikalnyj-ritm.html
 //https://scotch.io/tutorials/aesthetic-sass-3-typography-and-vertical-rhythm
 $base-line-height: 1.5rem;
