--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -2,9 +2,9 @@
 // Index
 //
 
-@import "modules/site/site";
+@import "site/site";
 
 //modules for stlye guide
-@import "modules/component-description/component-description";
-@import "modules/style-foundation/style-foundation";
-@import "modules/color-palette/color-palette";
+@import "component-description/component-description";
+@import "style-foundation/style-foundation";
+@import "color-palette/color-palette";
