--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -8,3 +8,4 @@
 @import "component-description/component-description";
 @import "style-foundation/style-foundation";
 @import "color-palette/color-palette";
+@import "typography/typography";
