--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -9,3 +9,4 @@
 @import "style-foundation/style-foundation";
 @import "color-palette/color-palette";
 @import "typography/typography";
+@import "language-menu/language-menu";
