--- a/static/sass/modules/language-menu/_language-menu.scss
+++ b/static/sass/modules/language-menu/_language-menu.scss
@@ -7,44 +7,64 @@ $module: 'language-menu';
 //https://css-tricks.com/forums/topic/prevent-body-scrolling-when-the-user-scrolls-on-fixed-position-div/
 
 .#{$module} {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: flex-start;
-    margin: 0;
-    padding: 0;
+    overflow: auto;
     width: 100vw;
     min-height: 100vh;
-    position: fixed;
-    overflow: auto;
+    max-height: 100vh;
+    position: absolute;
     top: 0;
     left: 0;
     background-color: get-site-color('wall');
-    list-style: none;
+
     @include set-z-index('language-menu');
-    
+
     &_hidden {
         display: none;
     }
+
+    &__list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        //@include vrhythm('padding-top', 2);
+    }
     
+    &__close-button
+    {
+        color: get-site-color('blue');
+        position: fixed;
+        top: 0;
+        right: 0;
+        @include type-settings(3);
+        text-align: right;
+        //padding-top: 1rem;
+        padding-right: 2rem;
+    }
+    
+
     &__item {
         display: block;
+        margin: 0;
+        padding: 0;
         color: get-site-color('blue');
-        //TOBE ALLIGNED WITH MEDIA QUERY
-        flex: 0 0 30%;
-        padding: 0.5rem 0;
+        @include type-settings(2);
+        @include font-regular();
+        text-align: center;
+    }
+    
+    &__item-text {
+        display: inline-block;
+        color: get-site-color('blue');
+        
         @include type-settings(1);
         @include font-regular();
         text-align: center;
-        @include vrhythm('padding-top');
-        @include vrhythm('padding-bottom');
-        
+        padding: 0.5rem 1rem;
         &:hover {
             border-bottom: 0.5rem inset get-site-color('blue');
             padding-bottom: 0;
         }
-        
+
         &_selected {
             color: get-site-color('green');
         }
