--- a/static/sass/modules/language-menu/_language-menu.scss
+++ b/static/sass/modules/language-menu/_language-menu.scss
@@ -10,8 +10,7 @@ $module: 'language-menu';
     display: none;
     overflow: auto;
     width: 100vw;
-    min-height: 100vh;
-    max-height: 100vh;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
