--- a/static/sass/config/_index.scss
+++ b/static/sass/config/_index.scss
@@ -2,7 +2,8 @@
 // Index
 //
 
-@import "variables";
+@import "scroll";
 @import "fonts";
+@import "typography";
 @import "colors";
 @import "z-index"
