--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,3 +1,4 @@
+@import "../bower_components/components-font-awesome/scss/variables";
 @import "modular-scale";
 @import "breakpoint";
 @import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
